# pianoV2

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DHtest.cpp  Makefile  PIANO_V2  README.md  cmake_install.cmake  main.cpp  playScore.cpp  setZero.cpp
Log/: 20240527_220332_3.txt  20240527_225300_1.txt  20240527_225300_2.txt  20240527_225300_3.txt
Log/DH_test/: 20240527_234802_1.txt  20240527_234802_2.txt  20240527_234802_3.txt
Parameter/: hand1param.xml  hand2param.xml  pedalparam.xml  score.xml
Score/: itsumo.xml  itsumo_noStress.xml  score1.xml  sonata.xml  sonata_noArticulation.xml  ttl.xml  ttl_noPedal.xml
include/: FingerMotor.hpp  dBPort.hpp  playThatSheet.hpp  serial.h  serial.hpp  whatTime.hpp
src/: DHtest.cpp  playScore.cpp
tinyxml2/tmp/: tinyxml2_proj-cfgcmd.txt  tinyxml2_proj-gitclone.cmake  tinyxml2_proj-gitupdate.cmake
